@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2006 Voltaire Inc.  All rights reserved.
+ * Copyright (c) 2004-2007 Voltaire Inc.  All rights reserved.
  *
  * This software is available to you under a choice of one of two
  * licenses.  You may choose to be licensed under the terms of the GNU
@@ -41,34 +41,14 @@
 #include <stdarg.h>
 #include <getopt.h>
 
-#define __BUILD_VERSION_TAG__ 1.1
+#define __BUILD_VERSION_TAG__ 1.2
 #include <common.h>
 #include <umad.h>
 #include <mad.h>
 
-#define IBERROR(fmt, args...)	iberror(__FUNCTION__, fmt, ## args)
+#include "ibdiag_common.h"
 
-static char *argv0 = "ibaddr";
-
-static void
-iberror(const char *fn, char *msg, ...)
-{
-	char buf[512];
-	va_list va;
-	int n;
-
-	va_start(va, msg);
-	n = vsprintf(buf, msg, va);
-	va_end(va);
-	buf[n] = 0;
-
-	if (ibdebug)
-		printf("%s: iberror: [pid %d] %s: failed: %s\n", argv0, getpid(), fn, buf);
-	else
-		printf("%s: iberror: failed: %s\n", argv0, buf);
-
-	exit(-1);
-}
+char *argv0 = "ibaddr";
 
 static int
 ib_resolve_addr(ib_portid_t *portid, int portnum, int show_lid, int show_gid)
